Fixed spacing for comments button

--- a/src/main/webapp/scss/echoed.scss
+++ b/src/main/webapp/scss/echoed.scss
@@ -1860,7 +1860,7 @@ h3{
                 }
             }
             .echo-s-c-ta{
-                margin: 5px 0px;
+                margin: 5px 3px;
                 textarea{
                     width: 705px;
                     padding: 10px;
@@ -1885,7 +1885,7 @@ h3{
                 cursor: pointer;
             }
             .echo-s-c-l{
-                margin-top: 10px;
+                margin-top: 5px;
                 border-top: 1px dotted #999;
                 .echo-s-c-l-c{
                     padding: 10px 0px 10px 10px;
